# LuaJIT-Luarocks-Torch7

./: CMakeLists.txt  README.md
LuaJIT/: CMakeLists.txt
extra/cunn/: THCUNN.lua
extra/cunn/lib/THCUNN/: SparseLinear.cu  SpatialFullConvolution.cu
extra/cutorch/: CMakeLists.txt
extra/cutorch/lib/THC/: CMakeLists.txt  THCDeviceTensor-inl.cuh  THCDeviceTensor.cuh  THCHalf.c  THCHalf.cu
extra/lua-cjson/: cjson.def  fpconv.c  lua_cjson.c  strbuf.c  strbuf.h
extra/luaffifb/: ffi.def  libtest.def  test.c
extra/luasocket/: core.def
extra/luasocket/mime/: core.exp
extra/luasocket/rockspec/: luasocket-3.0rc2-1.rockspec
extra/luasocket/socket/: core.exp
extra/torch-signal/doc/signal/: index.html
luarocks/: CMakeLists.txt  install.bat
luarocks/src/luarocks/: config.lua.win.in
